--- a/ui/pagelets/css/mod/_permission.scss
+++ b/ui/pagelets/css/mod/_permission.scss
@@ -41,7 +41,7 @@
   }
 
   .cmn-toggle:not(:checked) + label::before {
-    @include pos-end(1px);
+    @include inline-end(1px);
     background-color: transparent;
     border-radius: 24px;
   }
