--- a/ui/pagelets/css/mod/_publicChats.scss
+++ b/ui/pagelets/css/mod/_publicChats.scss
@@ -6,7 +6,7 @@
   .auto-refresh {
     position: absolute;
     top: 30px;
-    @include pos-end(20px);
+    @include inline-end(20px);
 
     @include transition;
 
