--- a/ui/pagelets/css/user/_trophy.scss
+++ b/ui/pagelets/css/user/_trophy.scss
@@ -1,7 +1,7 @@
 .trophies {
   position: absolute;
   top: 35px;
-  @include pos-end(1.5em);
+  @include inline-end(1.5em);
   height: 40px;
   display: flex;
   flex-flow: row wrap;
@@ -142,7 +142,7 @@
   font-size: 60px;
   margin: 0 -10px 0 30px;
   transform: scaleX(-1);
-  @include rtl {
+  @include if-rtl {
     transform: none;
   }
   color: $c-brag;
