--- a/ui/analyse/css/_analyse.free.scss
+++ b/ui/analyse/css/_analyse.free.scss
@@ -11,7 +11,7 @@
       @extend %box-radius-bottom;
 
       position: absolute;
-      @include pos-end(0);
+      @include inline-end(0);
       top: 100%;
       text-align: right;
       visibility: hidden;
