--- a/ui/ceval/css/_eval-gauge.scss
+++ b/ui/ceval/css/_eval-gauge.scss
@@ -29,7 +29,7 @@
   tick {
     position: absolute;
     top: 0;
-    @include pos-start(0);
+    @include inline-start(0);
     width: 100%;
     border-bottom: 2px ridge if($theme-light, #eee, #a0a0a0);
     opacity: 0.4;
