--- a/ui/chess/css/_promotion.scss
+++ b/ui/chess/css/_promotion.scss
@@ -5,7 +5,7 @@
   position: absolute;
   width: var(--cg-width, 100%);
   height: var(--cg-height, 100%);
-  @include pos-end(0);
+  @include inline-end(0);
 
   square {
     cursor: pointer;
