--- a/ui/chess/css/_variant-style.scss
+++ b/ui/chess/css/_variant-style.scss
@@ -8,7 +8,7 @@
     height: 12.5%;
     content: '';
     position: absolute;
-    @include pos-start(0);
+    @include inline-start(0);
     z-index: 1;
     pointer-events: none;
   }
@@ -30,7 +30,7 @@
   content: '';
   position: absolute;
   top: 37.5%;
-  @include pos-start(37.5%);
+  @include inline-start(37.5%);
   z-index: 1;
   pointer-events: none;
 }
