--- a/ui/common/css/component/_announce.scss
+++ b/ui/common/css/component/_announce.scss
@@ -3,7 +3,7 @@
 
   position: fixed;
   bottom: 0;
-  @include pos-start(0);
+  @include inline-start(0);
   font-size: 1.4em;
   background: $c-primary;
   color: $c-primary-over;
