--- a/ui/common/css/component/_subnav.scss
+++ b/ui/common/css/component/_subnav.scss
@@ -73,7 +73,7 @@
         position: absolute;
         height: 98%;
         top: 1%;
-        @include pos-end(-1px);
+        @include inline-end(-1px);
 
         @include transition(all, 0.25s);
 
