--- a/ui/common/css/component/_user-link.scss
+++ b/ui/common/css/component/_user-link.scss
@@ -30,7 +30,7 @@
     &.patron {
       opacity: 0.8;
 
-      @include rtl {
+      @include if-rtl {
         transform: scaleX(-1);
       }
     }
