--- a/ui/lobby/css/app/_app.scss
+++ b/ui/lobby/css/app/_app.scss
@@ -56,7 +56,7 @@
     font-size: 1.3em;
 
     &.toggle-filter {
-      @include pos-end(0);
+      @include inline-end(0);
     }
 
     @include transition;
