--- a/ui/pagelets/css/_account.scss
+++ b/ui/pagelets/css/_account.scss
@@ -171,7 +171,7 @@
         width: 100%;
         height: 1px;
         background: linear-gradient(to right, fade-out($c-accent, 0.5), $c-bg-box 80%);
-        @include rtl {
+        @include if-rtl {
           background: linear-gradient(to left, fade-out($c-accent, 0.5), $c-bg-box 80%);
         }
       }
