--- a/ui/pagelets/css/ublog/_card.scss
+++ b/ui/pagelets/css/ublog/_card.scss
@@ -48,11 +48,11 @@
     opacity: 1;
   }
   time {
-    @include pos-start(0);
+    @include inline-start(0);
     border-radius: 0 0 $box-radius-size 0;
   }
   .user-link {
-    @include pos-end(0);
+    @include inline-end(0);
     border-radius: 0 0 0 $box-radius-size;
   }
 
