--- a/ui/round/css/_control.scss
+++ b/ui/round/css/_control.scss
@@ -231,8 +231,8 @@
         content: '';
         position: absolute;
         top: 0;
-        @include pos-start(0);
-        @include pos-end(0);
+        left: 0;
+        right: 0;
         bottom: 0;
         pointer-events: none;
         background: $c-primary;
@@ -258,7 +258,7 @@
       justify-content: center;
       position: absolute;
       top: 0;
-      @include pos-end(-25px);
+      @include inline-end(-25px);
       width: 25px;
       height: 6rem;
       border: 0;
@@ -276,7 +276,7 @@
       &:hover {
         background: $c-bad;
         color: $c-bad-over;
-        @include pos-end(-36px);
+        @include inline-end(-36px);
         width: 35px;
       }
     }
