--- a/ui/swiss/css/_player-info.scss
+++ b/ui/swiss/css/_player-info.scss
@@ -12,7 +12,7 @@
   .close {
     position: absolute;
     top: 4px;
-    @include pos-end(5px);
+    @include inline-end(5px);
     opacity: 0.6;
 
     @include transition;
