--- a/ui/tournament/css/_app-control.scss
+++ b/ui/tournament/css/_app-control.scss
@@ -38,7 +38,7 @@
 
   .highlight {
     position: absolute;
-    @include pos-end(5px);
+    @include inline-end(5px);
     top: -3px;
     padding: 8px 20px;
     border-radius: 8px;
