--- a/ui/tournament/css/_app-header.scss
+++ b/ui/tournament/css/_app-header.scss
@@ -109,7 +109,7 @@
   .tour-sched-marathon & .fire-trophy {
     position: absolute;
     top: 0;
-    @include pos-start(10px);
+    @include inline-start(10px);
     width: 70px;
     height: 80px;
     opacity: 0.7;
@@ -130,7 +130,7 @@
       .shield-trophy {
         position: absolute;
         top: -8px;
-        @include pos-start(12px);
+        @include inline-start(12px);
         display: block;
         width: 67px;
         height: 80px;
