--- a/ui/tournament/css/_leaderboard.scss
+++ b/ui/tournament/css/_leaderboard.scss
@@ -60,7 +60,7 @@ $user-list-width: 35ch;
 .shield-trophy {
   position: absolute;
   top: -11px;
-  @include pos-start(15px);
+  @include inline-start(15px);
   width: 67px;
   height: 80px;
   background: img-url('trophy/shield-gold.png') no-repeat;
@@ -86,7 +86,7 @@ $user-list-width: 35ch;
   font-size: 1.1em;
 
   .shield-trophy {
-    @include pos-start(calc(var(--box-padding) - 10px));
+    @include inline-start(calc(var(--box-padding) - 10px));
     transform: scale(0.7);
   }
 
