--- a/ui/tournamentSchedule/css/_side.scss
+++ b/ui/tournamentSchedule/css/_side.scss
@@ -75,7 +75,7 @@
       background: mix($c-brag, $c-bg-page, 20%);
 
       &::before {
-        @include pos-start(0.5rem);
+        @include inline-start(0.5rem);
       }
     }
   }
@@ -90,7 +90,7 @@
 
     position: absolute;
     top: 0.3rem;
-    @include pos-start(0);
+    @include inline-start(0);
     font-size: 2.2em;
     opacity: 0.6;
     color: $c-brag;
