--- a/ui/common/css/abstract/_dir.scss
+++ b/ui/common/css/abstract/_dir.scss
@@ -1,11 +1,11 @@
 @mixin if-rtl {
-  html[dir='rtl'] & {
+  html.dir-rtl & {
     @content;
   }
 }
 
 @mixin if-ltr {
-  html:not([dir='rtl']) & {
+  html.dir-ltr & {
     @content;
   }
 }
@@ -56,7 +56,7 @@
   }
 }
 
-html[dir='rtl'] .force-ltr {
+html.dir-rtl .force-ltr {
   direction: ltr;
   text-align: left;
 }
