--- a/ui/common/css/component/_mini-game.scss
+++ b/ui/common/css/component/_mini-game.scss
@@ -22,6 +22,9 @@
   &__user {
     @extend %flex-center-nowrap;
     overflow: hidden;
+    .is.color-icon {
+      margin-#{$end-direction}: 1ch;
+    }
   }
 
   &__flag {
