Adjust custom picture max height

--- a/ui/dasher/css/_dasher.scss
+++ b/ui/dasher/css/_dasher.scss
@@ -228,7 +228,7 @@
     background-color: #000000bb;
 
     #images-viewport {
-      max-height: ($thumb-h + 2px) * 4;
+      max-height: min(100vh - 450px, 40vh);
       overflow: hidden auto;
     }
 
