--- a/ui/analyse/css/study/_layout.scss
+++ b/ui/analyse/css/study/_layout.scss
@@ -1,3 +1,7 @@
 .analyse__underboard {
   margin-top: calc($analyse-block-gap / 2);
 }
+
+.keyboard-move {
+  margin-top: calc($analyse-block-gap * 3 / 2);
+}
