--- a/ui/puzzle/css/_dashboard.scss
+++ b/ui/puzzle/css/_dashboard.scss
@@ -28,7 +28,7 @@
       margin-inline-start: 1ch;
       font-size: 2em;
 
-      &__list > * {
+      &__item {
         font-size: 1.3rem;
         padding: 0.3em 1em 0.3em 0.7em;
       }
