changed to blue-link, moved class to different css file

--- a/ui/chat/css/_discussion.scss
+++ b/ui/chat/css/_discussion.scss
@@ -61,6 +61,10 @@
       vertical-align: bottom;
     }
 
+    .blue-link {
+      color: $c-link;
+    }
+
     .patron {
       font-size: 1.1em;
       width: 1.2em;
