--- a/ui/common/css/component/_mini-game.scss
+++ b/ui/common/css/component/_mini-game.scss
@@ -23,7 +23,7 @@
     @extend %flex-center-nowrap;
     overflow: hidden;
     .is.color-icon {
-      margin-#{$end-direction}: 1ch;
+      margin-inline-end: 1ch;
     }
   }
 
