--- a/ui/analyse/css/_layout.scss
+++ b/ui/analyse/css/_layout.scss
@@ -38,10 +38,6 @@ body {
     grid-area: controls;
   }
 
-  .keyboard-move {
-    grid-area: kb-move;
-  }
-
   &__underboard {
     grid-area: under;
 
@@ -65,6 +61,10 @@ body {
   .eval-gauge {
     grid-area: gauge;
     display: none;
+  }
+
+  .keyboard-move {
+    grid-area: kb-move;
   }
 
   --chat-height: fit-content(0);
@@ -92,7 +92,7 @@ body {
     grid-template-rows: fit-content(0);
     grid-template-areas:
       'board      gauge tools'
-      'kb-move    .     .'
+      'kb-move    .     controls'
       'under      .     controls'
       'under      .     round-training'
       'under      .     side'
@@ -124,11 +124,11 @@ body {
     grid-template-columns: $col3-uniboard-side $analyse-block-gap var(--col3-uniboard-width) $analyse-block-gap $col3-uniboard-table;
     grid-template-rows: auto $chat-height 2.5em 1fr;
     grid-template-areas:
-      'side    . board gauge tools'
-      'chat    . board gauge tools'
+      'side    . board   gauge tools'
+      'chat    . board   gauge tools'
       'uchat   . kb-move .     controls'
-      'uchat   . under .     controls'
-      'uchat   . under .     round-training';
+      'uchat   . under   .     controls'
+      'uchat   . under   .     round-training';
 
     &__side {
       margin-top: 0;
