--- a/ui/analyse/css/_zh.scss
+++ b/ui/analyse/css/_zh.scss
@@ -37,6 +37,7 @@ $pocket-height: 60px;
       'board      gauge pocket-top'
       'board      gauge tools'
       'board      gauge pocket-bot'
+      'kb-move    .     controls'
       'under      .     controls'
       'under      .     round-training'
       'under      .     side'
@@ -47,12 +48,13 @@ $pocket-height: 60px;
   @include mq-at-least-col3 {
     grid-template-rows: $pocket-height $meta-height $chat-height $pocket-height;
     grid-template-areas:
-      'side    . board gauge pocket-top'
-      'side    . board gauge tools'
-      'chat    . board gauge tools'
-      'chat    . board gauge pocket-bot'
-      'uchat   . under .     controls'
-      'uchat   . under .     round-training';
+      'side    . board   gauge pocket-top'
+      'side    . board   gauge tools'
+      'chat    . board   gauge tools'
+      'chat    . board   gauge pocket-bot'
+      'uchat   . kb-move .     controls'
+      'uchat   . under   .     controls'
+      'uchat   . under   .     round-training';
   }
 }
 
