rating hided no click (#15053)
* rating hided no click

* fmt

--- a/ui/pagelets/css/user/_sub-rating.scss
+++ b/ui/pagelets/css/user/_sub-rating.scss
@@ -20,6 +20,10 @@
       @include transition;
     }
 
+    &[href=''] {
+      pointer-events: none;
+    }
+
     &[href]:hover {
       background: mix($c-bg-box, $c-bg-page, 50%);
 
