--- a/ui/common/css/theme/_default.scss
+++ b/ui/common/css/theme/_default.scss
@@ -10,33 +10,33 @@
   @return mix(#000, $color, $weight);
 }
 
-$site-hue: 37 !default;
+$site-hue: 37;
 
 /* top level $c-variables must be valid css format (rgba, hsla, hex) and are mixable by ui/build
 */
 
-$c-bg: hsl(37, 7%, 14%) !default; // alias for $c-bg-high
-$c-bg-page: hsl(37, 10%, 8%) !default;
-$c-bg-low: hsl(37, 7%, 22%) !default;
-$c-bg-zebra: hsl(37, 5%, 18%) !default;
-$c-bg-zebra2: hsl(37, 5%, 23%) !default;
-$c-bg-popup: hsl(37, 7%, 22%) !default;
-$c-body-gradient: hsl(37, 12%, 16%) !default;
-$c-font: hsl(0, 0%, 73%) !default;
-$c-primary: hsl(209, 79%, 56%) !default;
-$c-secondary: hsl(88, 62%, 37%) !default;
-$c-accent: hsl(22, 100%, 42%) !default;
-$c-bad: hsl(0, 60%, 50%) !default;
-$c-brag: hsl(37, 74%, 43%) !default;
-$c-clas: rgb(127, 90, 240) !default;
-$c-shade: hsl(0, 0%, 30%) !default;
-$c-inaccuracy: hsl(202, 78%, 62%) !default;
-$c-mistake: hsl(41, 100%, 45%) !default;
-$c-blunder: hsl(0, 69%, 60%) !default;
-$c-good-move: hsl(130, 67%, 62%) !default;
-$c-brilliant: hsl(129, 71%, 45%) !default;
-$c-interesting: hsl(307, 80%, 70%) !default;
-$c-dark: #333 !default;
+$c-bg: hsl(37, 7%, 14%); // alias for $c-bg-high
+$c-bg-page: hsl(37, 10%, 8%);
+$c-bg-low: hsl(37, 7%, 22%);
+$c-bg-zebra: hsl(37, 5%, 18%);
+$c-bg-zebra2: hsl(37, 5%, 23%);
+$c-bg-popup: hsl(37, 7%, 22%);
+$c-body-gradient: hsl(37, 12%, 16%);
+$c-font: hsl(0, 0%, 73%);
+$c-primary: hsl(209, 79%, 56%);
+$c-secondary: hsl(88, 62%, 37%);
+$c-accent: hsl(22, 100%, 42%);
+$c-bad: hsl(0, 60%, 50%);
+$c-brag: hsl(37, 74%, 43%);
+$c-clas: rgb(127, 90, 240);
+$c-shade: hsl(0, 0%, 30%);
+$c-inaccuracy: hsl(202, 78%, 62%);
+$c-mistake: hsl(41, 100%, 45%);
+$c-blunder: hsl(0, 69%, 60%);
+$c-good-move: hsl(130, 67%, 62%);
+$c-brilliant: hsl(129, 71%, 45%);
+$c-interesting: hsl(307, 80%, 70%);
+$c-dark: #333;
 
 /* shared-color-defs is the location for theme colors that share the same definition syntax.
    note that many of the assigned values may depend on variables from the including scope and
