--- a/ui/common/css/theme/board/_boards.scss
+++ b/ui/common/css/theme/board/_boards.scss
@@ -156,7 +156,7 @@ $board-themes-2d: (
     coord-color-white: #c0b19d,
     coord-color-black: #946d46,
   ),
-  'blue-haze': (
+  'haze': (
     file-ext: 'webp',
     coord-color-white: #afc2ce,
     coord-color-black: #56929b,
