--- a/ui/analyse/css/study/relay/_layout.scss
+++ b/ui/analyse/css/study/relay/_layout.scss
@@ -82,7 +82,7 @@ main.analyse.is-relay:not(.has-relay-tour) {
     display: none;
   }
   @include mq-at-least-col2 {
-    grid-template-rows: repeat(2, calc(var(--cg-height) / 2)) 2.5em; // TODO add hyphen once chessground is updated
+    grid-template-rows: repeat(2, calc(var(---cg-height) / 2)) 2.5em;
     grid-template-areas:
       'board        gauge side'
       'board        gauge tools'
@@ -97,7 +97,7 @@ main.analyse.is-relay:not(.has-relay-tour) {
     }
   }
   @include mq-at-least-col3 {
-    grid-template-rows: var(--cg-height) 2.5em; // TODO add hyphen once chessground is updated
+    grid-template-rows: var(---cg-height) 2.5em;
     grid-template-areas:
       'side           . board gauge tools'
       'side           . board .     controls'
