--- a/ui/common/css/theme/board/_chessground.scss
+++ b/ui/common/css/theme/board/_chessground.scss
@@ -7,10 +7,28 @@ cg-board {
   left: 0;
   user-select: none;
   line-height: 0;
-  background-size: cover;
 
   .manipulable & {
     cursor: pointer;
+  }
+}
+
+cg-board::before {
+  content: '';
+  left: 0;
+  width: 100%;
+  background-size: cover;
+  position: absolute;
+  border-radius: inherit;
+  box-shadow: inherit;
+
+  body:not(.simple-board) & {
+    filter: brightness(calc(var(---board-brightness) / 100)) hue-rotate(calc(var(---board-hue) * 3.6deg));
+
+    @include if-transp {
+      opacity: calc(var(---board-opacity) / 100);
+      filter: hue-rotate(calc(var(---board-hue) * 3.6deg));
+    }
   }
 }
 
