--- a/ui/common/css/form/_range.scss
+++ b/ui/common/css/form/_range.scss
@@ -1,5 +1,5 @@
 @mixin range-thumb {
-  @include metal;
+  background-image: linear-gradient(to bottom, $c-metal-top, $c-metal-bottom);
 
   border: 1px solid $c-font-dimmer;
   height: 1em;
