use if-light rather than html.light &

--- a/ui/lobby/css/_spotlight.scss
+++ b/ui/lobby/css/_spotlight.scss
@@ -6,9 +6,6 @@
 
 .tour-spotlight {
   @extend %flex-center-nowrap, %page-text-shadow, %nowrap-hidden, %metal-bg;
-  html.light & {
-    background-image: linear-gradient(to bottom, $m-primary_bg--mix-20, rgb(197, 216, 234));
-  }
 
   flex: 0 0 auto;
   padding: 0.3em;
@@ -23,7 +20,11 @@
   &:hover {
     @extend %metal-hover;
     text-shadow: none;
-    html.light & {
+  }
+
+  @include if-light {
+    background-image: linear-gradient(to bottom, $m-primary_bg--mix-20, rgb(197, 216, 234));
+    &:hover {
       background-image: linear-gradient(to bottom, $m-primary_bg--mix-25, $m-primary_bg-page--mix-20);
     }
   }
